--- a/package.json
+++ b/package.json
@@ -14,11 +14,20 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.63",
+    "gatsby-plugin-sass": "^2.3.13",
+    "gatsby-plugin-styled-components": "^3.3.11",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.2.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.3",
     "prettier": "2.1.1"
   },
   "repository": {
