--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "portfolio-website",
+  "name": "gatsby-starter-hello-world",
   "private": true,
-  "description": "My portfolio website",
+  "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
+  "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop -H 0.0.0.0",
@@ -10,8 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve -H 0.0.0.0",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
@@ -28,14 +28,13 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.3",
-    "gh-pages": "^3.1.0",
     "prettier": "2.1.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jordan-git/portfolio-website"
+    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
   },
   "bugs": {
-    "url": "https://github.com/jordan-git/portfolio-website/issues"
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
