--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "gatsby serve -H 0.0.0.0",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public"
+    "deploy": "gh-pages -d public"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.3",
+    "gh-pages": "^3.1.0",
     "prettier": "2.1.1"
   },
   "repository": {
