--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "gatsby serve -H 0.0.0.0",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gh-pages -d public"
+    "deploy": "gh-pages -d public -b master"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
