--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "styled-components": "^5.2.0"
   },
   "resolutions": {
     "styled-components": "^5"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.3",
     "gh-pages": "^3.1.0",
     "prettier": "2.1.1"
