--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop -H 0.0.0.0",
+    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve -H 0.0.0.0",
@@ -18,6 +18,7 @@
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
+    "gatsby-plugin-manifest": "^2.4.31",
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-sass": "^2.3.13",
     "gatsby-plugin-sharp": "^2.6.36",
