--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.63",
+    "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-layout": "^1.3.11",
     "gatsby-plugin-manifest": "^2.4.31",
